# labrat

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  bonemorph-map.md  labrat.config.example.json  mars.toml  meridian.toml  package-lock.json  package.json  tsconfig.json  voxbone-map.md
.claude-plugin/: plugin.json
.context/: CONTEXT.md
agents/: feedback-router.md  gate-reviewer.md  monitor.md  review-artifact-author.md  worker.md
data/: README.md
design/: 00-system-design.md  README.md
design/evidence/: agent-sdk-capabilities.md  cs-skills-map.md  design-review.md  poc-results.md
requirements/: README.md  demo.md
requirements/architecture/: agents.md  phase-compaction.md  prompt-caching.md  reviewer-anchoring.md  system.md
requirements/protocols/: mouse-knee-oa.md  scientific-context.md  task-directory.md
requirements/references/: claude-science-alignment.md  prior-art.md
samples/OA7-4L-run-005/: README.md
scripts/: export-skills-to-claude-science.sh  serve-dashboard.mts  verify-microct-runtime.ts
skills/microct-oa-mouse-knee/assets/voxbone/: README.md  pyproject.toml
skills/microct-oa-mouse-knee/assets/voxbone/examples/: run_study.py  validate_phantom.py
skills/microct-oa-mouse-knee/assets/voxbone/voxbone/: REVIEW_UI_SPEC.md  __init__.py  align.py  geometry.py  growth_plate.py  io.py  morphometry.py  pipeline.py  qc.py  refine3d.py  review.py  segment.py  stats.py  voi.py
skills/microct-oa-mouse-knee/assets/voxbone/voxbone/review_assets/: femur.html  index.html  shared.css  shared.js  tibia.html
validation/: .gitignore
(+368 files in other folders)
