[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "voxbone"
version = "0.1.0"
description = "Reusable pipeline for murine knee-joint micro-CT: segmentation, geometric OA indices, and trabecular morphometry."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "scipy",
    "pandas",
    "scikit-image",
    "pydicom",
    "matplotlib",
    "pillow",
]

[project.optional-dependencies]
stats = ["statsmodels", "seaborn"]

[tool.setuptools]
packages = ["voxbone"]

[tool.setuptools.package-data]
voxbone = ["review_assets/*.html", "review_assets/*.css", "review_assets/*.js", "*.md"]
